Fix footer overlapping with page content

--- a/src/styles/base/doc.scss
+++ b/src/styles/base/doc.scss
@@ -15,6 +15,8 @@ html, body, #root, #app, .page {
 .page {
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+  height: auto;
 }
 
 body {
